# titanic

./: .Rprofile  .gitignore  Dockerfile  README.md  Titanic.Qmd  Titanic.html  app.R  client_secret_2_88146497745-lk0v1fu7epogtd9di3no5bjobkfo98ol.apps.googleusercontent.com.json  cloud-links.txt  deploy.R  make_csv_for_prediction.R  manifest.json  plumber.R  pyproject.toml  requests-httr2.R  titanic-466214-dd0b8f1ad195.json  titanic.code-workspace  titanic_model.rds  titanic_ranger.R  titanic_training.R  write manifest.R
Titanic_files/libs/bootstrap/: bootstrap-80e67673e8e58101107bff1156c3363f.min.css
api/: Dockerfile  Dockerfile.multistage  gcloud.txt  plumber.R  test_gcloud_api.R
api/rsconnect/shinyapps.io/ivan-lozo/: titanic.dcf
board-local/titanic_survived_predictor/20250817T131845Z-cb89b/: data.txt  titanic_survived_predictor.rds
board-local/titanic_survived_predictor/20250825T093850Z-5ac3d/: data.txt  titanic_survived_predictor.rds
board-local/titanic_survived_predictor/20250908T071330Z-5ac3d/: data.txt
cleaning_training/: cleaning.R  titanic_training.R
data/: gcloud_test.R
deploy/: Dockerfile  deploy.R  gcloud.dockerfile.txt  plumber.R  run_api.R  test_gcloud_api.R
python/: pyproject.toml  response.py
python_version/: run_pipeline.py
rsconnect/shinyapps.io/ivan-lozo/: titanic_survival_predict.dcf
shiny_app/: Dockerfile  app.R  gcloud.txt  manifest.json  write manifest.R
