[project]
name = "titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "google>=3.0.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "python",
]
